@@ -15,7 +15,7 @@
 make.rgb(red, green, blue, name = NULL, white = "D65",
          gamma = 2.2)
 
-colorConverter(toXYZ, fromXYZ, name, white = NULL)
+colorConverter(toXYZ, fromXYZ, name, white = NULL, vectorized = FALSE)
 }
 \arguments{
   \item{red,green,blue}{Chromaticity (xy or xyY) of RGB primaries}
@@ -28,6 +28,8 @@ colorConverter(toXYZ, fromXYZ, name, white = NULL)
     to this space}
   \item{toXYZ}{Function to convert from this space to XYZ tristimulus
     coordinates.}
+  \item{vectorized}{Whether \code{fromXYZ} and \code{toXYZ} are
+    vectorized internally to handle input color matrices.}
 }
 \details{
   An RGB colour space is defined by the chromaticities of the  red, green and
@@ -48,6 +50,15 @@ colorConverter(toXYZ, fromXYZ, name, white = NULL)
   white. If a specific reference white is included in the definition of
   the colour space (as for the RGB spaces) this second argument should
   be ignored and may be \code{...}.
+
+  As of R 3.6.0 the built in color converters along with
+  \code{\link{convertColor}} were vectorized to process three column
+  color matrices in one call, instead of row by row via \code{\link{apply}}.
+  In order to maintain backwards compatibility, \code{colorConverter} wraps
+  \code{fromXYZ} and \code{toXYZ} in a \code{apply} loop in case they do not
+  also support matrix inputs.  If the \code{fromXYZ} and \code{toXYZ} functions
+  you are using operate correctly on the whole color matrix at once instead of
+  row by row, you can set \code{vectorized=TRUE} for a performance improvement.
 }
 \value{
   An object of class \code{colorConverter}
@@ -70,7 +81,7 @@ hexcolor <- colorConverter(toXYZ = function(hex, ...) {
                             rgb <- t(col2rgb(hex))/255
                             colorspaces$sRGB$toXYZ(rgb, ...) },
                            fromXYZ = function(xyz, ...) {
-                              rgb <- colorspaces$sRGB$fromXYZ(xyz, ..)
+                              rgb <- colorspaces$sRGB$fromXYZ(xyz, ...)
                               rgb <- round(rgb, 5)
                               if (min(rgb) < 0 || max(rgb) > 1)
                                    as.character(NA)
@@ -85,6 +96,26 @@ zapsmall(luv <- convertColor(cols, from = "sRGB", to = "Luv", scale.in = 255))
 (cc <- round(convertColor(as.matrix(hex), from = hexcolor, to = "sRGB",
                           scale.in = NULL, scale.out = 255)))
 stopifnot(cc == cols)
+
+## Internally vectorized version of hexcolor, notice the use
+## of `vectorized = TRUE`:
+
+hexcolorv <- colorConverter(toXYZ = function(hex, ...) {
+                            rgb <- t(col2rgb(hex))/255
+                            colorspaces$sRGB$toXYZ(rgb, ...) },
+                           fromXYZ = function(xyz, ...) {
+                              rgb <- colorspaces$sRGB$fromXYZ(xyz, ...)
+                              rgb <- round(rgb, 5)
+                              oob <- pmin(rgb[,1],rgb[,2],rgb[,3]) < 0 |
+                                     pmax(rgb[,1],rgb[,2],rgb[,3]) > 0
+                              res <- rep(NA_character_, nrow(rgb))
+                              res[!oob] <- rgb(rgb[!oob,,drop=FALSE])},
+                           white = "D65", name = "#rrggbb",
+                           vectorized=TRUE)
+(ccv <- round(convertColor(as.matrix(hex), from = hexcolor, to = "sRGB",
+                           scale.in = NULL, scale.out = 255)))
+stopifnot(ccv == cols)
+
 }
 \keyword{color}
 
